--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -23,6 +23,7 @@
             app:tint = "@color/black"/>
 
         <TextView
+            android:id="@+id/tv_header_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
